--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
     <span>level:</span>
     <span id="level">noob</span>
     <div>shop</div>
+    <button onclick="autoCliker()">
+        Auto cliker $50
+    </button>
+    <div>
+        <button onclick="AddClick()">
+            Add cliks $20
+        </button>
+    </div>
     <div class="container">
         <button onclick="add()">
             <img id="img" src="oreo.png" >
